<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/weather_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="20dp" />
    <!--Loading State-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvNoLocations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/loading"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_size_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Current Weather-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clCurrentWeather"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/sea_cloudy"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tvCurrentLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/CurrentTemperatureDetailText"
                android:layout_marginTop="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Parkview" />

            <TextView
                android:id="@+id/tvTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/CurrentTemperatureText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCurrentLocation"
                tools:text="25" />

            <TextView
                android:id="@+id/tvTemperatureDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/CurrentTemperatureDetailText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTemperature"
                tools:text="SUNNY" />

            <TextView
                android:id="@+id/tvLastUpdated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_updated"
                android:textAppearance="@style/SmallTextAppearance"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTemperatureDetail" />

            <TextView
                android:id="@+id/txt_show_forecast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:background="@drawable/text_background"
                android:text="@string/forecast"
                android:textAppearance="@style/SmallTextAppearance"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/forecast_fab" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/forecast_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="40dp"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:srcCompat="@drawable/ic_calendar"
                app:tint="@color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--Forecast-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clForeCastWeather"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/cloudy"
            android:visibility="gone">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clCurrentWeatherInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvMinTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/SmallTextAppearance"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="19" />

                <TextView
                    android:id="@+id/tvMinTempDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_temperature"
                    android:textAppearance="@style/SmallTextAppearance"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvMinTemp" />

                <TextView
                    android:id="@+id/tvCurrentTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/SmallTextAppearance"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="25" />

                <TextView
                    android:id="@+id/tvCurrentTempDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_temperature"
                    android:textAppearance="@style/SmallTextAppearance"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvCurrentTemp" />

                <TextView
                    android:id="@+id/tvMaxTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/SmallTextAppearance"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="27" />

                <TextView
                    android:id="@+id/tvMaxTempDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_temperature"
                    android:textAppearance="@style/SmallTextAppearance"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvMaxTemp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/separatorView"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/clCurrentWeatherInfo" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clForecastData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/separatorView">

                <ProgressBar
                    android:id="@+id/forecast_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/forecastRecycleView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:listitem="@layout/weather_entry" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--            <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/favouriteFab"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="40dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:srcCompat="@drawable/ic_favorite_24"
                            app:tint="@color/white" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</FrameLayout>